--- a/lab1.csproj
+++ b/lab1.csproj
@@ -6,4 +6,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SendGrid" Version="9.29.3" />
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="lab.Services">
+      <HintPath>..\lab.Services\bin\Debug\net8.0\lab.Services.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
